--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
           when: always
           command: |
             pip install codacy-coverage
-            python-codacy-coverage -r test-reports/python3/coverage.xml
+            python-codacy-coverage -r test-reports/coverage.xml
 
   develop:
     # Test development installation
