--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -246,8 +246,23 @@ OBS:
   output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
 
-obs4mips:
+OBS6:
   cmor_strict: false
+  input_dir:
+    default: 'Tier[tier]/[dataset]'
+    BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
+  input_file:
+    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
+    BSC: '[short_name]_*.nc'
+  input_fx_dir:
+    default: 'Tier[tier]/[dataset]'
+  input_fx_file:
+    default: '[project]_[dataset]_[type]_[version]_fx_[fx_var].nc'
+  output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
+  cmor_type: 'CMIP6'
+
+obs4mips:
+  cmor_strict: true
   input_dir:
     default: 'Tier[tier]/[dataset]'
   input_file: '[short_name]_[dataset]_[level]_[version]_*.nc'
@@ -266,6 +281,7 @@ ana4mips:
   input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[mip]_[type]_[dataset]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
+  # TODO: add cmor_path and table and set cmor_strict to true
 
 EMAC:
   input_dir:
@@ -273,13 +289,3 @@ EMAC:
   input_file: ''
   output_file: '[dataset]_[ensemble]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
-
-ERA5:
-  cmor_strict: true
-  input_dir:
-    default: 'Tier[tier]/[dataset]'
-  input_file:
-    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
-  output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
-  cmor_type: 'CMIP6'
-  cmor_path: 'era5'
