--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 
 [build_sphinx]
-source-dir = doc/sphinx/source
+source-dir = doc/
 build-dir = doc/sphinx/build
 all_files = 1
 builder = html
@@ -21,7 +21,7 @@ addopts =
 env =
     MPLBACKEND = Agg
 flake8-ignore =
-    doc/sphinx/source/conf.py ALL
+    doc/conf.py ALL
     esmvalcore/cmor/_fixes/*/*.py N801
 log_level = WARNING
 
