generate headers in sidebar

--- a/.gitignore
+++ b/.gitignore
@@ -83,10 +83,10 @@ test-reports/
 /python_test_out.txt
 
 # Build folder
-doc/sphinx/source/diag_scripts/**
-doc/sphinx/source/plot_scripts/**
+doc/diag_scripts/**
+doc/plot_scripts/**
 doc/sphinx/build
-doc/sphinx/source/_sidebar.rst.inc
+doc/_sidebar.rst.inc
 
 # Data files
 *.nc
