--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - esmpy
   - iris>=2.2
   - graphviz
+  - gcc_linux-64
   - libunwind  # Needed for Python3.7+
   - python>=3.6
   - python-stratify
