--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,13 +149,7 @@ jobs:
             dpkg -l > /logs/versions.txt
             conda env export -n base > /logs/build_environment.yml
             # Build conda package
-            conda build . -c conda-forge -c birdhouse > /logs/build_log.txt
-            # Install conda package
-            conda create -y --name esmvaltool > /logs/conda_esmvaltool.txt 2>&1
-            set +x; conda activate esmvaltool; set -x
-            conda install -y esmvaltool --use-local -c conda-forge
-            conda env export > /logs/test_environment.yml
-            esmvaltool -h
+            conda build . -c conda-forge -c esmvalgroup > /logs/build_log.txt
       - store_artifacts:
           path: /logs
 
