--- a/meta.yaml
+++ b/meta.yaml
@@ -5,7 +5,7 @@
 # conda build . -c conda-forge -c esmvalgroup
 
 # Package version number
-{% set version = "2.0.0a1" %}
+{% set version = "2.0.0b0" %}
 
 package:
   name: esmvalcore
