--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ test=pytest
 
 [build_sphinx]
 source-dir = doc/
-build-dir = doc/sphinx/build
+build-dir = doc/build
 all_files = 1
 builder = html
 
