--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -269,7 +269,7 @@ ana4mips:
 
 EMAC:
   input_dir:
-    default: '[dataset]'
-  input_file: ''
-  output_file: '[dataset]_[ensemble]_[short_name]_[start_year]-[end_year]'
-  cmor_type: 'CMIP5'
+    DKRZ: '[dataset]/[channel]'
+  input_file: '[dataset]*[channel]-*.nc'
+  output_file: '[dataset]_[channel]_[short_name]_[start_year]-[end_year]'
+  cmor_type: 'CMIP6'
