--- a/esmvalcore/quicklook/template_recipe_emac.yml
+++ b/esmvalcore/quicklook/template_recipe_emac.yml
@@ -18,7 +18,9 @@ documentation:
     - esmval
 
 datasets:
-    - {{ DATASET }}
+{% for dataset in datasets%}
+    - {{ dataset }}
+{% endfor %}
 
 preprocessors:
 
