--- a/esmvalcore/quicklook/template_recipe_emac_atmos_dynamics.yml
+++ b/esmvalcore/quicklook/template_recipe_emac_atmos_dynamics.yml
@@ -10,13 +10,13 @@ documentation:
     - bock_ls
 
   maintainer:
-    - broe_bj
+    - laue_ax
 
   references:
     - acknow_project
 
   projects:
-    - esmval
+    - cmip6dicad
 
 datasets:
 {% for dataset in datasets%}
@@ -41,6 +41,9 @@ diagnostics:
     variables:
       clivi:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_clt:
     description: Timeseries of global mean total cloud coverage.
@@ -61,6 +64,9 @@ diagnostics:
     variables:
       clivi:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_evspsbl:
     description: Timeseries of global mean evaporation.
@@ -71,6 +77,9 @@ diagnostics:
     variables:
       evspsbl:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_hfns:
     description: Timeseries of global mean surface net heat flux.
@@ -81,6 +90,9 @@ diagnostics:
     variables:
       hfns:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_pr:
     description: Timeseries of global mean precipitation.
@@ -91,6 +103,9 @@ diagnostics:
     variables:
       pr:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_prc:
     description: Timeseries of global mean convective precipitation.
@@ -101,6 +116,9 @@ diagnostics:
     variables:
       prc:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_prl:
     description: Timeseries of global mean large-scale precipitation.
@@ -111,6 +129,9 @@ diagnostics:
     variables:
       prl:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_prsn:
     description: Timeseries of global mean snow fall.
@@ -121,6 +142,9 @@ diagnostics:
     variables:
       prsn:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_prw:
     description: Timeseries of global mean water vapor content.
@@ -131,6 +155,9 @@ diagnostics:
     variables:
       prw:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_rlns:
     description: Timeseries of global mean net longwave radiation (surface).
@@ -141,6 +168,9 @@ diagnostics:
     variables:
       rlns:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_rlut:
     description: Timeseries of global mean outgoing longwave radiation (TOA).
@@ -151,6 +181,9 @@ diagnostics:
     variables:
       rlut:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_rsns:
     description: Timeseries of global mean net solar radiation (surface).
@@ -161,6 +194,9 @@ diagnostics:
     variables:
       rsns:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_rsnt:
     description: Timeseries of global mean net solar radiation (TOA).
@@ -171,6 +207,9 @@ diagnostics:
     variables:
       rsnt:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_rtmt:
     description: Timeseries of global mean radiation budget (TOA).
@@ -181,6 +220,9 @@ diagnostics:
     variables:
       rtmt:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_tas:
     description: Timeseries of global mean surface temperature.
@@ -191,6 +233,9 @@ diagnostics:
     variables:
       tas:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_ts:
     description: Timeseries of global mean 2-m temperature.
@@ -201,3 +246,6 @@ diagnostics:
     variables:
       ts:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
