--- a/esmvalcore/quicklook/template_recipe_emac_forcings.yml
+++ b/esmvalcore/quicklook/template_recipe_emac_forcings.yml
@@ -10,13 +10,13 @@ documentation:
     - bock_ls
 
   maintainer:
-    - broe_bj
+    - laue_ax
 
   references:
     - acknow_project
 
   projects:
-    - esmval
+    - cmip6dicad
 
 datasets:
 {% for dataset in datasets%}
@@ -41,6 +41,9 @@ diagnostics:
     variables:
       TN_GHG_CO2:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_TN_GHG_N2O:
     description: Timeseries of global mean N2O.
@@ -51,6 +54,9 @@ diagnostics:
     variables:
       TN_GHG_N2O:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_TN_GHG_CH4:
     description: Timeseries of global mean CH4.
@@ -61,6 +67,9 @@ diagnostics:
     variables:
       TN_GHG_CH4:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_BB_CO_s:
     description: Timeseries of global mean biomass burning CO.
@@ -71,6 +80,9 @@ diagnostics:
     variables:
       BB_CO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_BB_N_s:
     description: Timeseries of global mean biomass burning N.
@@ -81,6 +93,9 @@ diagnostics:
     variables:
       BB_N_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_BB_SO_s:
     description: Timeseries of global mean biomass burning SO.
@@ -91,6 +106,9 @@ diagnostics:
     variables:
       BB_SO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_BB_AER_TC_s:
     description: Timeseries of global mean biomass burning total carbon.
@@ -101,6 +119,9 @@ diagnostics:
     variables:
       BB_AER_TC_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
         
   glob_timeseries_ANTHNT_NO_s:
     description: Timeseries of global mean anthropogenic NO.
@@ -111,6 +132,9 @@ diagnostics:
     variables:
       ANTHNT_NO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_ANTHNT_CO_s:
     description: Timeseries of global mean anthropogenic CO.
@@ -121,6 +145,9 @@ diagnostics:
     variables:
       ANTHNT_CO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_ANTHNT_SO2_s:
     description: Timeseries of global mean anthropogenic SO2.
@@ -131,6 +158,9 @@ diagnostics:
     variables:
       ANTHNT_SO2_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_ANTHNT_AER_TC_s:
     description: Timeseries of global mean anthropogenic total carbon.
@@ -141,6 +171,9 @@ diagnostics:
     variables:
       ANTHNT_AER_TC_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_ROAD_NO:
     description: Timeseries of global mean road traffic NO.
@@ -151,6 +184,9 @@ diagnostics:
     variables:
       ANTHNT_ROAD_NO:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_ROAD_AER_BC:
     description: Timeseries of global mean road traffic black carbon.
@@ -161,6 +197,9 @@ diagnostics:
     variables:
       ANTHNT_ROAD_AER_BC:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_SHIP_NO_s:
     description: Timeseries of global mean ship NO.
@@ -171,6 +210,9 @@ diagnostics:
     variables:
       ANTHNT_SHIP_NO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_SHIP_SO2_s:
     description: Timeseries of global mean ship SO2.
@@ -181,6 +223,9 @@ diagnostics:
     variables:
       ANTHNT_SHIP_SO2_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_SHIP_AER_BC_s:
     description: Timeseries of global mean ship black carbon.
@@ -191,6 +236,9 @@ diagnostics:
     variables:
       ANTHNT_SHIP_AER_BC_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_AIRC_NO_s:
     description: Timeseries of global mean air traffic NO.
@@ -201,6 +249,9 @@ diagnostics:
     variables:
       AIRC_NO_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
 
   glob_timeseries_VOLC_SO2_s:
     description: Timeseries of global mean volcanic SO2.
@@ -211,3 +262,6 @@ diagnostics:
     variables:
       VOLC_SO2_s:
         preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
