add zonal mean timeseries to recipe templates

--- a/esmvalcore/quicklook/template_recipe_emac_atmos_chem.yml
+++ b/esmvalcore/quicklook/template_recipe_emac_atmos_chem.yml
@@ -68,6 +68,8 @@ diagnostics:
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
+      zon_timeseries:
+        script: quicklooks/zonal_timeseries.py
 
   glob_timeseries_MP_S:
     description: Timeseries of global mean S.
