--- a/esmvalcore/quicklook/template_recipe_emac_ocean.yml
+++ b/esmvalcore/quicklook/template_recipe_emac_ocean.yml
@@ -32,6 +32,21 @@ preprocessors:
 
 diagnostics:
 
+  glob_timeseries_awhea:
+    description: Timeseries of mean net surface heat flux over open water 
+    themes:
+      - phys
+    realms:
+      - atmos
+    variables:
+      awhea:
+        preprocessor: prep_zon
+    scripts:
+      glob_timeseries:
+        script: quicklooks/global_timeseries.py
+      zon_timeseries:
+        script: quicklooks/zonal_timeseries.py
+
   glob_timeseries_siconca:
     description: Timeseries of global mean sea ice concentration.
     themes:
@@ -44,6 +59,8 @@ diagnostics:
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
+      zon_timeseries:
+        script: quicklooks/zonal_timeseries.py
         
   glob_timeseries_sithick:
     description: Timeseries of global mean sea ice thickness.
@@ -57,6 +74,8 @@ diagnostics:
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
+      zon_timeseries:
+        script: quicklooks/zonal_timeseries.py
         
   glob_timeseries_tosga:
     description: Timeseries of global mean sea surface temperature.
@@ -70,3 +89,5 @@ diagnostics:
     scripts:
       glob_timeseries:
         script: quicklooks/global_timeseries.py
+      zon_timeseries:
+        script: quicklooks/zonal_timeseries.py
