--- a/esmvalcore/preprocessor/_emac/var_mapping.yml
+++ b/esmvalcore/preprocessor/_emac/var_mapping.yml
@@ -39,7 +39,7 @@ TN_GHG_N2O: {TN_GHG_N2O: import_grid}
 TN_GHG_CH4: {TN_GHG_CH4: import_grid}
 BB_CO_s: {BB_CO: import_grid} #recipe
 BB_N_s: {BB_N: import_grid} #recipe
-BB_SO_S: {BB_SO: import_grid} #recipe
+BB_SO2_s: {BB_SO: import_grid} #recipe
 BB_AER_TC_s: {BB_AER_BC: import_grid, BB_AER_OC: import_grid} #recipe (add)
 ANTHNT_NO_s: {ANTHNT_NO: import_grid} #recipe
 ANTHNT_CO_s: {ANTHNT_CO: import_grid} #recipe
@@ -48,8 +48,8 @@ ANTHNT_AER_TC_s: {ANTHNT_AER_BC: import_grid, ANTHNT_AER_OC: import_grid} #recip
 ROAD_NO: {ROAD_NO: import_grid}
 ROAD_AER_BC: {ROAD_AER_BC: import_grid}
 SHIP_NO_s: {SHIP_NO: import_grid} #recipe
-SHIP_SO2_S: {SHIP_SO2: import_grid} #recipe
-SHIP_AER_BC_s: {SHIP_AER_B: import_grid} #recipe
+SHIP_SO2_s: {SHIP_SO2: import_grid} #recipe
+SHIP_AER_BC_s: {SHIP_AER_BC: import_grid} #recipe
 AIRC_NO_s: {airc_NO: import_grid, aps: Amon, hyai: Amon, hybi: Amon} #recipe
 VOLC_SO2_s: {VOLC_SO2_SO2: import_grid, aps: Amon, hyai: Amon, hybi: Amon} #recipe
 
