Added CMOR table for siconca

--- a/esmvalcore/preprocessor/_emac/var_mapping.yml
+++ b/esmvalcore/preprocessor/_emac/var_mapping.yml
@@ -16,7 +16,7 @@ prc: {aprc_ave: Amon}
 prl: {aprl_ave: Amon} #not cmor
 prsn: {aprs_ave: Amon}
 prw: {qvi_ave: Amon}
-siconc: {seaice_ave: Amon}
+siconca: {seaice_ave: Amon}
 sithick: {siced_ave: Amon}
 rlds: {flxtbot_ave: Amon, tradsu_ave: Amon} #recipe
 rlus: {tradsu_ave: Amon}
