--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -272,7 +272,8 @@ EMAC:
   input_dir:
     default: '[dataset]/[channel]'
   input_file: '[dataset]*[channel]*.nc'
-  output_file: '[dataset]_[short_name]_[start_year]-[end_year]'
+  output_dir: '{variable_group}'
+  output_file: '[dataset]_[short_name]'
   cmor_type: 'CMIP6'
   date_prefix_regex: '^.{0,15}'
   cmorize:
