--- a/esmvalcore/config-user.yml
+++ b/esmvalcore/config-user.yml
@@ -47,9 +47,10 @@ rootpath:
 # See config-developer.yml for definitions.
 drs:
   CMIP5: default
+
 # Quicklook
 quicklook:
-  active: True
+  active: true
   output_dir: /path/to/persistent/output/dir
   recipe_dir: /path/to/templates/of/recipes
   recipes:
