--- a/esmvalcore/preprocessor/_emac/var_mapping.yml
+++ b/esmvalcore/preprocessor/_emac/var_mapping.yml
@@ -19,7 +19,7 @@ prw: {qvi_ave: Amon}
 siconca: {seaice_ave: Amon}
 sithick: {siced_ave: Amon}
 rlds: {flxtbot_ave: Amon, tradsu_ave: Amon} #recipe
-rlus: {tradsu_ave: Amon}
+rlus: {tradsu_ave: Amon} #recipe
 rlut: {flxttop_ave: Amon}
 rlutcs: {flxtftop_ave: Amon}
 rsds: {flxsbot_ave: Amon, sradsu_ave: Amon} #recipe
