--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -271,13 +271,13 @@ EMAC:
   cmor_strict: false
   input_dir:
     default: '[dataset]/[channel]'
-  input_file: '[dataset]*[channel]*.nc'
+  input_file: '[dataset]*[channel].nc'
   output_dir: '{variable_group}'
   output_file: '[dataset]_[short_name]'
   cmor_type: 'CMIP6'
-  date_prefix_regex: '^.{0,15}'
   cmorize:
     # Paths relative to esmvaltool.preprocessor
     # Also accepts absolute paths (starting with '/' or '~')
     cmorizer: '_emac/_cmorizer.py'
+    data_finder: '_emac/_data_finder.py'
     var_mapping: '_emac/var_mapping.yml'
