--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -146,6 +146,7 @@ CMIP5:
     DKRZ: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[mip]/[ensemble]/[latestversion]/[short_name]'
     ETHZ: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/'
     SMHI: '[dataset]/[ensemble]/[exp]/[frequency]'
+    RCAST: '[exp]/[mip]/[short_name]/[dataset]/[ensemble]/'
     BSC: '[type]/[project]/[exp]/[dataset.lower]'
   input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_*.nc'
   input_fx_dir:
@@ -236,9 +237,11 @@ OBS:
   input_dir:
     default: 'Tier[tier]/[dataset]'
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
+    RCAST: '[dataset]'
   input_file:
     default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
     BSC: '[short_name]_*.nc'
+    RCAST: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   input_fx_dir:
     default: 'Tier[tier]/[dataset]'
   input_fx_file:
@@ -250,6 +253,7 @@ obs4mips:
   cmor_strict: false
   input_dir:
     default: 'Tier[tier]/[dataset]'
+    RCAST: '/'
   input_file: '[short_name]_[dataset]_[level]_[version]_*.nc'
   input_fx_dir:
     default: 'Tier[tier]/[dataset]'
@@ -263,6 +267,7 @@ ana4mips:
   cmor_strict: false
   input_dir:
     default: 'Tier[tier]/[dataset]'
+    RCAST: '/'
   input_file: '[short_name]_[mip]_[type]_[dataset]_*.nc'
   output_file: '[project]_[mip]_[type]_[dataset]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
